# pypi-template

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
