[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-template"
dynamic = ["version"]
description = "pypi-template"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [ 
    { name = "Hrishikesh Belagali", email = "belagal1@msu.edu" },
]
keywords = [
    'template'
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy~=1.26.3"
]

[project.urls]
Homepage = "https://github.com/lonelyneutrin0/pypi-template"

[project.optional-dependencies]
dev = [
    "hatchling~=1.27.0",
    "pytest~=8.0.2",
    "ruff~=0.9.4",
    "mypy~=1.13.0",
    "pdoc~=15.0.4",
    
]

examples = [ 
    "matplotlib~=3.10.3"
]

[tool.hatch.version]
path = "pypi_template/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pypi_template",
]

[tool.pytest.ini_options]
pythonpath = ["."]